Changelog
=========

7.5-dev - (unreleased)
----------------------

7.4 - (2014-06-24)
------------------
* Bug fix: fixed archive/unarchive content rules logic.
  [ghicaale refs #19953]
* Upgrade step: enable on production the "Archive previous version" and
  "Unarchive previous version" content rules.
  [ghicaale refs #19953]

7.3 - (2014-06-02)
------------------
* Bug fix: fixed "Archive/Unarchive" content rule action not to crash when there
  are no versions
  [ghicaale refs #19918]

7.2 - (2014-05-13)
------------------
* Bug fix: fixed various warning triggered on Zope startup
  [ghicaale refs #19289]
* Bug fix: decode the initiator, reason and message form fields in order to
  avoid error when non asci characters are passed in the form
  [ichim-david refs #19334]
* Bug fix: archive process no longer crashes if alsoChildren option is selected
  and the object contained a discussion item
  [ichim-david refs #19334]
* Upgrade step: from Plone root:
   - run /@@archive_previous_versions?alsoChildren=True
   - [ichimdav refs #18740]
* Bug fix: archive_previous_versions BrowserView now correctly extends the
  returning list when calling archive_obj_and_children
  [ichimdav refs #18740]

7.1 - (2014-03-10)
------------------
* Change: updated wording of the archive options presented within the archive
  dialog
  [ichimdav refs #18740]
* Change: archive operation now accepts an optional archive_date parameter which
  can be used as the archive date instead of the date when the archive operation
  was called
  [ichimdav refs #18740]
* Upgrade step: from Plone root:
   - run /@@archive_previous_versions if you want to archive only the previous
     versions
   - run /@@archive_previous_versions?alsoChildren=True if you want to archive
     also the children of the previous versions
   - [ichimdav refs #18740]
* Feature: added @@archive_previous_versions BrowserView which will archive
  previous versions of archived objects if the versions aren't already archived