@@ -3,6 +3,8 @@ Changelog
 
 7.5-dev - (unreleased)
 ----------------------
+* Bug fix: fixed JS registry conditon for archive_dialog.js
+  [ghicaale refs #20389]
 
 7.4 - (2014-06-24)
 ------------------
